@@ -14,7 +14,7 @@
 
 #include <vector>
 
-enum INPUT_FLAGS
+enum EDITOR_INPUT_FLAGS
 {
     INPUT_FLAG_EDITOR_OBJECT_1 = (1 << 1),
     INPUT_FLAG_EDITOR_OBJECT_2 = (1 << 2),
@@ -30,6 +30,7 @@ void editor_object_flags_free();
 void unload_unselected_objects();
 void sub_6AB211();
 void reset_selected_object_count_and_size();
+void finish_object_selection();
 int32_t window_editor_object_selection_select_object(uint8_t bh, int32_t flags, const rct_object_entry* entry);
 
 /**
